--- a/weedWeb/src/app/components/data-view/data-view.component.css
+++ b/weedWeb/src/app/components/data-view/data-view.component.css
@@ -1,8 +1,91 @@
 :host ::ng-deep {
+    
     .p-dropdown {
         width: 14rem;
         font-weight: normal;
     }
+    .product-badge {
+        padding: 0.5rem 1rem; 
+        border-radius: 5px;
+        &.status-outofstock {
+            background: #ffcccc; 
+            color: #cc0000; 
+            font-weight: bold; 
+        }
+    
+        &.status-lowstock {
+            background: #fff7cc; 
+            color: #cca300;
+            font-weight: bold; 
+        }
+    
+        &.status-instock {
+            background: #ccf2cc; 
+            color: #009900; 
+            font-weight: bold; 
+        }
+    }
+
+    .p-input-icon-left > .p-inputtext {
+        padding-left: 2.5rem;
+        width: 40rem;
+    }
+    .p-dropdown {
+        width: 16rem;
+        font-weight: normal;
+    }
+    .p-dropdown .p-dropdown-trigger {
+        background: transparent;
+        color: rgb(127 160 35);
+        width: 3rem;
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+    }
+    .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
+        background: #e5facb;
+        border-color: #EFF6FF;
+        color:  #6c757d;
+
+    }
+    .p-link:focus {
+        outline: 0 none;
+        outline-offset: 0;
+        box-shadow: 0 0 0 0.2rem  rgb(127 160 35);
+    }
+    .p-rating .p-rating-icon.pi-star-fill {
+        color: rgb(127 160 35);
+    }
+    .p-selectbutton .p-button.p-highlight {
+        background: rgb(127 160 36);
+        border-color: rgb(127 160 35);
+        color: #ffffff;
+    }
+    .p-selectbutton .p-button.p-highlight:hover {
+        background: rgb(127 160 35);
+        border-color: rgb(127 160 35);
+        color: #ffffff;
+    }
+    .p-selectbutton .p-button:not(.p-highlight) {
+        background: #f0f0f0; 
+        border-color: #d0d0d0;
+        color: #333333; 
+    }
+    .p-button {
+        color: #ffffff;
+        background: rgb(127 160 35);
+        border: 1px solid rgb(127 160 35);
+        padding: 0.75rem 1.25rem;
+        font-size: 1rem;
+        transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+        border-radius: 6px;
+    }
+    .p-button:hover {
+        background: rgb(127, 160, 35);
+        border-color: rgb(127, 160, 35);
+        color: #ffffff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
+    
     
     .product-name {
         font-size: 1.5rem;
@@ -23,7 +106,7 @@
         vertical-align: middle;
     }
     
-    .product-list-item {
+.product-list-item {
         display: flex;
         align-items: center;
         padding: 1rem;
@@ -60,7 +143,7 @@
         }
     }
     
-    .product-grid-item {
+.product-grid-item {
         margin: .5em;
         border: 1px solid #dee2e6;
     
@@ -93,9 +176,6 @@
     box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     margin-bottom: 2rem;
-}
-.search-input-container {
-    width: 400px !important; 
 }
 
 @media screen and (max-width: 576px) {
