--- a/weedWeb/src/app/components/data-view/data-view.component.html
+++ b/weedWeb/src/app/components/data-view/data-view.component.html
@@ -7,14 +7,14 @@
     filterBy="name"
     [sortField]="sortField"
     [sortOrder]="sortOrder"
-    layout="grid"
+    [layout]="currentLayout"
   >
     <ng-template pTemplate="header">
       <div class="flex md:flex-row md:justify-content-between">
         <p-dropdown
           [options]="sortOptions"
           [(ngModel)]="sortKey"
-          placeholder="Sort By Price"
+          placeholder="Filtrar por precio"
           (onChange)="onSortChange($event)"
           styleClass="mb-2 md:mb-0"
         ></p-dropdown>
@@ -24,7 +24,7 @@
             class="search-input"
             type="search"
             pInputText
-            placeholder="Search by Name"
+            placeholder="Buscar por nombre"
             (input)="dv.filter($any($event.target).value)"
           />
         </span>
@@ -49,13 +49,15 @@
             <span class="product-price">${{ product.price }}</span>
             <p-button
               icon="pi pi-shopping-cart"
-              label="Add to Cart"
+              label="Añadir al carrito"
               [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
+              [ngClass]="getStatusClass(product.inventoryStatus)"
             ></p-button>
             <span
               [class]="
                 'product-badge status-' + product.inventoryStatus.toLowerCase()
               "
+              [ngClass]="getStatusClass(product.inventoryStatus)"
               >{{ product.inventoryStatus }}</span
             >
           </div>
@@ -78,6 +80,7 @@
             >
           </div>
           <div class="product-grid-item-content">
+            <img src="{{ product.image }}" alt="{{ product.name }}" class="product-image" />
             <div class="product-name">{{ product.name }}</div>
             <div class="product-description">{{ product.description }}</div>
             <p-rating
