register service with new API

--- a/weedWeb/src/app/register-company/register-company.component.html
+++ b/weedWeb/src/app/register-company/register-company.component.html
@@ -103,7 +103,7 @@
               [class.is-invalid]="validacionNit"
               name="nit"
               class="form-control"
-              [(ngModel)]="companyRegister.NIT"
+              [(ngModel)]="companyRegister.nit"
               required
             />
             <small *ngIf="validacionNit" class="text-danger">Ingrese un nit válido</small>
