--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -62,7 +62,7 @@
               formControlName= "nombre"
               [class.is-invalid]="validacionNombre"
               name="nombre"
-              [(ngModel)]="userRegister.first_name"
+              [(ngModel)]="userRegister.name"
               class="form-control"
               required
             />
