--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -49,12 +49,14 @@
   </div>
   <div class="container box"></div>
 
-
   <div class="register-container">
     <div class="container">
       <form [formGroup]="forma">
         <h2 class="text-center">Registrarse</h2>
-        <div class="form-row">
+        <div class="imagenRegistro">
+          <img src="../../../assets/image/toallin.png" alt="" width="100" height="120">
+        </div>
+        <div class="form-row p-6">
           <div class="form-group col-md-12 mt-1" >
             <label>Nombre</label>
             <input
@@ -113,17 +115,27 @@
 
           <div class="form-group col-md-12 mt-1">
             <label>Contraseña</label>
-            <input
-              formControlName="password"
-              [class.is-invalid] = "validacionPassword"
-              type="password"
-              name="userRegister.password"
-              [(ngModel)]="userRegister.password"
-              class="form-control"
-              required
-            />
+            <div class="input-group">
+              <input
+                formControlName="password"
+                [class.is-invalid]="validacionPassword"
+                type="password"
+                name="userRegister.password"
+                class="form-control"
+                required
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary"
+                  type="button"
+                  (click)="togglePasswordVisibility()"
+                >
+                  <i class="fas" [ngClass]="{'fa-eye': !showPassword2, 'fa-eye-slash': showPassword2}"></i>
+                </button>
+              </div>
+            </div>
             <small *ngIf="validacionPassword" class="text-danger">
-              Ingrese una contraseña de minímo 8 carácteres
+              Ingrese una contraseña de mínimo 8 caracteres
             </small>
           </div>
 
@@ -144,7 +156,7 @@
         <div class="register-button">
           <button
             type="submit"
-            class="btn btn-primary btn-block"
+            class="btn btn-sign-up"
             (click)="register()"
           >
             Registrarse
