--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -71,7 +71,7 @@
           <a class="nav-link" href="/Freemium">Mi plan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Login">Cerrar sesión</a>
+          <a class="nav-link" (click)="logout()">Cerrar sesión</a>
         </li>
       </ul>
     </div>
