--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -52,7 +52,7 @@
   <div class="register-container">
     <div class="container">
       <form [formGroup]="forma">
-        <h2 class="text-center">Registrarse</h2>
+        <h2 class="text-center">¡Registrate!</h2>
         <div class="imagenRegistro">
           <img src="../../../assets/image/toallin.png" alt="" width="100" height="120">
         </div>
