--- a/weedWeb/src/app/register/register.component.css
+++ b/weedWeb/src/app/register/register.component.css
@@ -77,28 +77,28 @@ a:hover {
   display: flex;
   position: absolute;
   justify-content: center;
+  align-items: center;
   z-index: 100;
   top: 50%;
   transform: translateY(-50%);
   max-width: 40%;
-  width: 40%;
+  /* width: 40%; */
   min-width: 20%;
-  min-height: 70%;
-  padding-left: 0.5rem;
+  min-height: 20%;
+  /* padding-left: 0.5rem; */
   padding-right: 0rem;
-  padding-top: 5rem;
-  padding-bottom: 10rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   margin-left: 30vmax;
-  margin-right: 10vmax;
+  /* margin-right: 10vmax; */
   background-color: rgba(228, 237, 210, 0.863);
   border-radius: 70px;
 }
 
-.container .register-button{
+.register-button {
   display: flex;
-  justify-content: center;
-  margin-top: 1rem;
-
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
 }
 
 .homecontainer {
@@ -153,10 +153,7 @@ a:hover {
 
 .btn-sign-up {
   background-color: rgb(127, 160, 35);
-  margin-right: 40px;
   color: #fff;
-  width: 100%;
-  padding: 8px;
 }
 
 .form-input:focus {
