--- a/weedWeb/src/app/components/data-view/data-view.component.html
+++ b/weedWeb/src/app/components/data-view/data-view.component.html
@@ -33,15 +33,11 @@
     </ng-template>
     <ng-template let-product pTemplate="listItem">
       <div class="p-col-12">
-        <div class="product-list-item">
+        <div class="product-list-item card">
           <div class="product-list-detail">
             <div class="product-name">{{ product.name }}</div>
             <div class="product-description">{{ product.description }}</div>
-            <p-rating
-              [ngModel]="product.rating"
-              [readonly]="true"
-              [cancel]="false"
-            ></p-rating>
+            <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
             <i class="pi pi-tag product-category-icon"></i
             ><span class="product-category">{{ product.category }}</span>
           </div>
@@ -50,16 +46,7 @@
             <p-button
               icon="pi pi-shopping-cart"
               label="Añadir al carrito"
-              [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
-              [ngClass]="getStatusClass(product.inventoryStatus)"
             ></p-button>
-            <span
-              [class]="
-                'product-badge status-' + product.inventoryStatus.toLowerCase()
-              "
-              [ngClass]="getStatusClass(product.inventoryStatus)"
-              >{{ product.inventoryStatus }}</span
-            >
           </div>
         </div>
       </div>
@@ -72,29 +59,15 @@
               <i class="pi pi-tag product-category-icon"></i>
               <span class="product-category">{{ product.category }}</span>
             </div>
-            <span
-              [class]="
-                'product-badge status-' + product.inventoryStatus.toLowerCase()
-              "
-              >{{ product.inventoryStatus }}</span
-            >
           </div>
           <div class="product-grid-item-content">
             <img src="{{ product.image }}" alt="{{ product.name }}" class="product-image" />
             <div class="product-name">{{ product.name }}</div>
             <div class="product-description">{{ product.description }}</div>
-            <p-rating
-              [ngModel]="product.rating"
-              [readonly]="true"
-              [cancel]="false"
-            ></p-rating>
+            <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>
           </div>
           <div class="product-grid-item-bottom">
             <span class="product-price">${{ product.price }}</span>
-            <p-button
-              icon="pi pi-shopping-cart"
-              [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
-            ></p-button>
           </div>
         </div>
       </div>
